feat: complete interval frontend integration